components/component-sample2/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: my-java-springboot
spec:
  replicas: 6
  selector:
    matchLabels:
      app: java-springboot-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: java-springboot-app
    spec:
      containers:
      - env:
        - name: FOO
          value: foo1
        - name: BAR
          value: bar1
        image: quay.io/redhat-appstudio/user-workload:maysun-component-sample2
        name: my-java-springboot
        ports:
        - containerPort: 8081
          name: http
          protocol: TCP
        - containerPort: 1111
        resources:
          limits:
            cpu: "2"
            memory: 500Mi
            storage: 400Mi
          requests:
            cpu: 700m
            memory: 400Mi
            storage: 200Mi
status: {}
