components/component-sample2/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: my-java-springboot-svc
spec:
  ports:
  - name: http-8081
    port: 8081
    protocol: TCP
    targetPort: 8081
  - port: 1111
    targetPort: 1111
  selector:
    app: java-springboot-app
status:
  loadBalancer: {}
