components/component-sample2/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: http-8081
spec:
  host: route111
  path: /
  port:
    targetPort: 1111
  to:
    kind: Service
    name: component-sample2
    weight: null
status: {}
